# Penetration_testing_project

./: LICENSE  README.md  payload_app.py  payload_app.spec  pyproject.toml  requirements.txt  setup.cfg
core/: config.py  logger.py  utils.py
gui/: main_gui.py
modules/: credentials.py  discovery.py  exfiltration.py  persistence.py  processes.py
tests/: test_modules.py
