[project]
name = "penetration-test-sim"
version = "0.1.0"
description = "A harmless penetration test simulation tool for educational and authorized use only."
authors = [
    { name="n0m4official" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Education",
    "Intended Audience :: Other Audience",
    "Topic :: Security",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/n0m4official/penetration-test-sim"
Repository = "https://github.com/n0m4official/penetration-test-sim"
Issues = "https://github.com/n0m4official/penetration-test-sim/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
