[metadata]
name = penetration-test-sim
version = 0.1.0
author = n0m4official
description = A harmless penetration test simulation tool for educational and authorized use only.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/n0m4official/penetration-test-sim
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: Education
    Intended Audience :: Other Audience
    Topic :: Security
    Topic :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.extras_require]
dev = 
    pytest
